# AuthProviderConnector

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  compose.yml  login_flow.md  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  post-create.sh
.devcontainer/scripts/: register-aliases.sh
alembic/: env.py
alembic/versions/: 2b093eed3b45_create_initial_tables.py  d5267b170251_dbをsqliteからpostgresにした.py  edf37a9585fd_removed_the_incorrect_composite_unique_.py
contexts/users/application/: dependencies.py  exceptions.py  jwt_service.py  services.py
contexts/users/domain/: entities.py  exceptions.py  interfaces.py
contexts/users/infrastructure/: auth0_client.py  database.py  models.py  repositories.py
contexts/users/presentation/: router.py
contexts/users/presentation/dto/: auth.py
core/: config.py  security.py
pgadmin/: servers.json.template
src/: cli.py  config.py  main.py
src/authproviderconnector/: __init__.py
src/authproviderconnector/context/users/: types.py
src/authproviderconnector/context/users/application/: exception.py  jwt_service.py  port.py
src/authproviderconnector/context/users/domain/: exception.py  model.py  repository.py
src/authproviderconnector/context/users/infrastructure/: auth0_client.py  factory.py  model.py  repository.py
src/infrastructure/: __init__.py  di.py
src/infrastructure/db/: base.py  connection.py
src/models/: __init__.py
(+7 files in other folders)
